# qz7

./: .gitignore  CMakeLists.txt
inherited-from-arkive/: CMakeLists.txt
inherited-from-arkive/engine/: CMakeLists.txt
inherited-from-arkive/engine/archives/bzip2/: BZip2Archive.cpp  BZip2Archive.h
inherited-from-arkive/engine/archives/gzip/: GzipArchive.cpp  GzipArchive.h  GzipHeader.h
inherited-from-arkive/engine/archives/tar/: TarArchive.cpp  TarArchive.h  TarFormat.h  TarRead.cpp  TarWrite.cpp
inherited-from-arkive/engine/archives/zip/: ZipAddCommon.cpp  ZipAddCommon.h  ZipArchive.cpp  ZipArchive.h  ZipCompressionMode.h  ZipHandler.cpp  ZipHandler.h  ZipHandlerOut.cpp  ZipHeader.cpp  ZipHeader.h  ZipIn.cpp  ZipIn.h  ZipItem.cpp  ZipItem.h  ZipOut.cpp  ZipOut.h  ZipRegister.cpp  ZipUpdate.cpp  ZipUpdate.h
inherited-from-arkive/engine/compression/bzip2/: BZip2CRC.cpp  BZip2CRC.h  BZip2Const.h  BZip2Decoder.cpp  BZip2Decoder.h  BZip2Encoder.cpp  BZip2Encoder.h  BZip2Register.cpp  BlockSort.cpp  BlockSort.h  Mtf8.h
inherited-from-arkive/engine/compression/copy/: CopyCodec.cpp  CopyCodec.h
inherited-from-arkive/engine/compression/deflate/: DeflateConst.h  DeflateDecoder.cpp  DeflateDecoder.h  DeflateEncoder.h  DeflateRegister.cpp
inherited-from-arkive/engine/compression/huffman/: HuffmanDecoder.h  HuffmanEncode.cpp  HuffmanEncode.h
inherited-from-arkive/engine/compression/lz/: LzHash.h  MatchFinder.cpp
inherited-from-arkive/engine/kernel/: Archive.cpp  Archive.h  BitStreamBE.h  BitStreamLE.cpp  BitStreamLE.h  CompressionCodec.cpp  CompressionCodec.h  CompressionManager.cpp  CompressionManager.h  Filter.cpp  Filter.h  FilterCrc.cpp  FilterCrc.h  HandlerRegistry.cpp  HandlerRegistry.h  LimitedIoDevice.cpp  LimitedIoDevice.h  MemoryBuffer.h  QioBuffer.cpp  QioBuffer.h  QioBuffer_p.h  RingBuffer.cpp  RingBuffer.h  arkive_export.h
inherited-from-arkive/engine/tests/: CMakeLists.txt  RingBufferTest.cpp
inherited-from-arkive/tests/: CMakeLists.txt  archivecreatetest.cpp  archivereadertest.cpp  protostest.cpp
libqz7/: CMakeLists.txt
libqz7/codecs/deflate/: DeflateConst.h  DeflateDecoder.cpp  DeflateDecoder.h  DeflateEncoder.cpp  DeflateEncoder.h
libqz7/codecs/support/: HuffmanEncode.cpp  MatchFinder.cpp
libqz7/core/: Archive.cpp  BitIoBE.cpp  BitIoLE.cpp  Codec.cpp  Crc.cpp  Registry.cpp  RingBuffer.cpp  Sort.cpp  Stream.cpp  StreamTools.cpp  Volume.cpp
libqz7/include/: Analyzer.h  Archive.h  BitIoBE.h  BitIoLE.h  CrcAnalyzer.h  Error.h  Plugin.h  Registry.h  Stream.h  StreamTools.h  Volume.h
libqz7/include/codec/: HuffmanDecoder.h
libqz7/include/qz7/: Analyzer.h  Archive.h  BitIoBE.h  BitIoLE.h  ByteIO.h  Codec.h  CompilerTools.h  Crc.h  CrcAnalyzer.h  Error.h  NumberIO.h  Plugin.h  RingBuffer.h  Sort.h  Stream.h  StreamTools.h  Volume.h
libqz7/include/qz7/codec/: HuffmanDecoder.h  HuffmanEncode.h  MatchFinder.h
libqz7/plugins/: BuiltinPlugin.cpp  BuiltinPlugin.h
libqz7/plugins/archives/gzip/: GzipArchive.cpp  GzipArchive.h
libqz7/plugins/codecs/deflate/: DeflateConst.h  DeflateDecoder.cpp  DeflateDecoder.h  DeflateDecoderMT.cpp  DeflateDecoderMT_p.h  DeflateDecoderST.cpp  DeflateDecoderST_p.h  DeflateEncoder.cpp  DeflateEncoder.h  DeflateRegister.cpp
libqz7/plugins/codecs/support/: HuffmanEncode.cpp  MatchFinder.cpp
libqz7/plugins/volumes/singlefile/: SingleFileVolume.cpp  SingleFileVolume.h
libqz7/tests/: BitIoTest.cpp  CMakeLists.txt  RingBufferTest.cpp
tests/: CMakeLists.txt  GzipTest.cpp
